Client Einzelspiel-Online auf dediziertem Server nun mit kI (Issue #2)

--- a/css/karten_lib_2/karten.css
+++ b/css/karten_lib_2/karten.css
@@ -15,6 +15,7 @@
   overflow:hidden;
   background-size:100% 99.5%;
   -webkit-background-size:99.5%;
+  -moz-background-size:100%;
   background-position:center center;
   background-repeat:no-repeat;
   -moz-transform: rotateY(0deg);
